[package]
name = "safety-rust"
version = "0.1.1"
authors = ["Kendall Garner <17521368+kgarner7@users.noreply.github.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.50"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"
lazy_static = "1.4.0"
rand = { version = "0.8", features = ["small_rng"] }
redis = { version = "0.21.5", features = ["tokio-comp"] }
regex = "1.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
serenity = { version = "0.10", features = ["collector", "unstable_discord_api"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
