[package]
name = "safety-rust"
version = "0.1.1"
authors = ["Kendall Garner <17521368+kgarner7@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "safety-rust"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
lazy_static = "1.4.0"
linkify = "0.8"
owoify_rs = "~1.0.0"
rand = { version = "0.8", features = ["small_rng"] }
redis = { version = "0.22", features = ["tokio-comp"] }
regex = "1.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.11", default-features=false, features=["builder", "cache", "client", "collector", "gateway", "http", "model", "rustls_backend", "utils"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.2"